Use tgz variant for Python tarball instead of xz.

--- a/components/python/python27/Makefile
+++ b/components/python/python27/Makefile
@@ -29,9 +29,9 @@ COMPONENT_NAME=		Python
 COMPONENT_VERSION=	2.7.10
 COMPONENT_PROJECT_URL=	http://python.org/
 COMPONENT_SRC=		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
-COMPONENT_ARCHIVE=	$(COMPONENT_SRC).tar.xz
+COMPONENT_ARCHIVE=	$(COMPONENT_SRC).tgz
 COMPONENT_ARCHIVE_HASH=	\
-    sha256:1cd3730781b91caf0fa1c4d472dc29274186480161a150294c42ce9b5c5effc0
+    sha256:eda8ce6eec03e74991abb5384170e7c65fcd7522e409b8e83d7e6372add0f12a
 COMPONENT_ARCHIVE_URL=	$(COMPONENT_PROJECT_URL)ftp/python/$(COMPONENT_VERSION)/$(COMPONENT_ARCHIVE)
 COMPONENT_BUGDB=	utility/python
 
