--- a/components/openssl/openssl-1.0.2/Makefile
+++ b/components/openssl/openssl-1.0.2/Makefile
@@ -188,20 +188,6 @@ COMPONENT_PRE_BUILD_ACTION = \
       $(LN) -fs $(COMPONENT_DIR)/inline-t4/sparcv9-gf2m.pl	$(@D)/crypto/bn/asm; \
       $(LN) -fs $(COMPONENT_DIR)/inline-t4/sparct4-mont.pl	$(@D)/crypto/bn/asm; )
 
-# Build openssl-0.9.8 if not yet built.
-$(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH32)/.built \
-$(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH64)/.built:
-	$(GMAKE) -C $(COMPONENT_DIR)/../openssl-0.9.8 build
-
-$(PROTO_DIR)/.openssl-0.9.8:	$(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH32)/.built \
-				$(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH64)/.built
-	$(MKDIR) $(PROTO_DIR)/lib/$(MACH64)
-	$(CP) -a $(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH32)/libssl.so.0.9.8 $(PROTO_DIR)/lib
-	$(CP) -a $(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH32)/libcrypto.so.0.9.8 $(PROTO_DIR)/lib
-	$(CP) -a $(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH64)/libssl.so.0.9.8 $(PROTO_DIR)/lib/$(MACH64)
-	$(CP) -a $(COMPONENT_DIR)/../openssl-0.9.8/build/$(MACH64)/libcrypto.so.0.9.8 $(PROTO_DIR)/lib/$(MACH64)
-	$(TOUCH) $@
-
 # Enable ASLR for this component
 ASLR_MODE =	$(ASLR_ENABLE)
 
@@ -399,7 +385,7 @@ install:	$(INSTALL_32_and_64) $(BUILD_DIR_WANBOOT)/.built
 	$(MKDIR) -p $(WANBOOT_TO);
 	$(CP) $(BUILD_DIR_WANBOOT)/wanboot-openssl.o $(WANBOOT_TO);
 else
-install:	$(INSTALL_32_and_64) $(PROTO_DIR)/.openssl-0.9.8
+install:	$(INSTALL_32_and_64)
 endif
 
 # We need to modify the default lint flags to include patched opensslconf.h from
